hermes_fuzz_executed_few_shot/fuzz_98_execution
'use strict';
var someFunc1 = () => Promise.resolve();
function someFunc2(a, b) {
    return Promise.resolve();
}
var SomeClass =   (function () {
    function SomeClass(x) {
        this.x = x;
        this.y = 1;
    }
    if (typeof Symbol === "function" && typeof Symbol.iterator === "symbol") {
        SomeClass.prototype[Symbol.iterator] = function () {
            return this;
        };
    }
    return SomeClass;
})();
var someFunc3 = () => Promise.resolve();
var Promise = typeof Promise!== "undefined"? Promise : require('promise-polyfill');
var someFunc4 = (fn1, fn2) => Promise.resolve();
someFunc4(() => Promise.resolve(), () => Promise.resolve());
function someFunc5(someFunc6) {
    var myLambda = () => Promise.resolve();
    return Promise.resolve();
}
var myClass = SomeClass(11);
var myClass2 = new SomeClass(11);
var myClass3 = Object.getPrototypeOf(myClass);
var mySymbol = Symbol.for('mySymbol');
var myWeak = new WeakRef(myClass);
var promise = Promise.resolve();
console.log(promise);  
var foo = require('someModule');
var bar = require.requireActual('someModule');  
```

## Contributing

Please refer to [CONTRIBUTING.md](./CONTRIBUTING.md)

## Credit

Hermes is a fork from [React Native](https: 

Many thanks to all contributors listed above!



Execution Output ------------------:
test.js:47:1: error: non-terminated template literal

^
test.js:35:3: note: template literal started here
```
  ^
test.js:47:1: error: invalid expression

^
